# NSMoR

./: .claude.md  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.sh
.claude/agents/: nsmor_developer.md  nsmor_reviewer.md  nsmor_tester.md
.claude/prompts/: fixAnalysis.md  optimizer.md  unstable.md
.claude/workflows/: nsmor-refactor-loop-trainingconvergence.js
.github/workflows/: ci.yml
biomor/: BOUNDARY.md  __init__.py  biomor_dataloader.py  checkpoint.py  config.py  config_parser.py  data_extractor.py  loss.py  mcmc_module.py  model_biomor_core.py
biomor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
biomor/analysis/: BOUNDARY.md  __init__.py  dynamics.py
biomor/pipeline/: BOUNDARY.md  labeling.py
config/: default.yaml
nsmor/: BOUNDARY.md  __init__.py  checkpoint.py  config.py  config_parser.py  data_extractor.py  loss.py  mcmc_module.py  model_nsmor_core.py  model_utils.py  nsmor_dataloader.py
nsmor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nsmor/analysis/: BOUNDARY.md  __init__.py  dynamics.py  uq.py
nsmor/pipeline/: BOUNDARY.md  __init__.py  io.py  kinematics.py  labeling.py
results/: integration_summary.json  lesion_statistics.csv  psychophysics_summary.json
scripts/: analyze_dynamics.py  analyze_integration.py  analyze_jacobian.py  pre_load_adapt.py  pre_load_data.py  prepare_data.py  simulate_autoregressive.py  simulate_lesion.py  simulate_psychophysics.py  train.py
tests/: conftest.py  test_biophysics.py  test_loss.py  test_pipeline.py
(+2 files in other folders)
